# cmake-opengl-template

./: .gitignore  CMakeLists.txt  README.md
libs/example-lib/: CMakeLists.txt
libs/example-lib/src/: example-lib.cpp  example-lib.hpp
targets/app/: main.cpp
targets/tests/: wnd-size.cpp
